<resources>
    <string name="app_name">OMCM App</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="profile_buttonDesc">Profile Button</string>
    <string name="settings_buttonDesc">Settings Button</string>
    <string name="back_buttonDesc">Back Button</string>
    <string name="profile_label">Profile</string>
    <string name="profile_pageDesc">Profile Page</string>
    <string name="name_text">Name</string>
    <string name="bio_text">Bio</string>
    <string name="profile_pictureDesc">Profile Picture</string>
    <string name="edit_button_desc">Edit Button</string>
    <string name="profile_edit_desc">Profile Edit</string>
    <string name="save_btn_txt">Save</string>
    <string name="save_button_desc">Save Button</string>
    <string name="name_hint">Name</string>
    <string name="bio_hint">Bio</string>
    <string name="upload_image_button_desc">Upload Image Button</string>
    <string name="profile_pic_1_desc">Profile Pic 1</string>
    <string name="profile_pic_2_desc">Profile Pic 2</string>
    <string name="profile_pic_3_desc">Profile Pic 3</string>
    <string name="profile_pic_4_desc">Profile Pic 4</string>
    <string name="settings_label_desc">Settings</string>
    <string name="language_label">Language</string>
    <string name="current_language">English (Philippines)</string>
    <string name="display_category">Display</string>
    <string name="display_mode_text">Light mode</string>
    <string name="backup_text">Backup</string>
    <string name="save_data_text">Save data</string>
    <string name="restore_text">Restore</string>
    <string name="load_existing_data_text">Load existing data</string>
    <string name="help_text">Help</string>
    <string name="manual_text">Manual</string>
    <string name="report_bugs_text">Report Bugs</string>
    <string name="feedbacks_text">Send Feedbacks/Suggestions</string>
    <string name="credits_text">Credits/Licences</string>
    <string name="data_text">Data</string>
    <string name="version_info_text">Version Info</string>
    <string name="consumption_tab_desc">Water and energy consumption tab button</string>
    <string name="scan_tab_desc">Scan tab button</string>
    <string name="sensors_tab_desc">Sensors tab button</string>
    <string name="energy_tab_desc">Energy consumptions tab</string>
    <string name="water_consumption_text">Water Consumption</string>
    <string name="water_page_desc">Water consumption page</string>
    <string name="energy_page_desc">Energy consumption page</string>
    <string name="energy_consumption_text">Energy Consumption</string>
    <string name="water_btn_desc">Water consumptions button</string>
    <string name="gallery_text">Gallery</string>
    <string name="delete_text">Delete</string>
    <string name="system_configs_tab_desc">System Configs Tab</string>
    <string name="user_uid">UID</string>
    <string name="feedbacks_label_desc">Feedbacks</string>
    <string name="feedbacks_label">Feedbacks</string>
    <string name="version">1.0.0</string>
    <string name="send_feedback_button_desc">send feedback button</string>
    <string name="send_button">Send</string>
    <string name="send_button_desc">Send button</string>
    <string name="gpu">GPU</string>
    <string name="button2"><u>...</u></string>
    <string name="button3"><u>...</u></string>
    <string name="charts_text">Charts</string>
    <string name="greetingTextView">greetingTextView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="graphical_data_text">Graphical Data</string>
    <string name="dashboard_pageDesc">Dashboard page</string>
    <string name="dashboard_label">Dashboard</string>
    <string name="aboutUs_txt">Welcome to OMCM, an innovative app dedicated to advancing scientific methodologies in mushroom Agri farming using IoT and Ai. Our mission is to create and implement a Smart Oyster Mushroom Cultivation and Monitoring System that leverages cutting-edge technology and robust data analysis to achieve precise control over growing conditions, maximize yield, and minimize environmental impact. We aim to provide actionable insights and continuous improvements in mushroom farming practices, thereby contributing to a more efficient and sustainable agricultural industry.</string>
    <string name="whoWeAre_txt">OMCM is developed by students at the Polytechnic University of the Philippines conducting a research study entitled Smart Oyster Mushroom Cultivation and Monitoring System based on Internet of Things (IoT) and Neural Networks in partial fulfillment of the requirements for the degree Bachelor of Science in Computer Engineering.</string>
    <string name="ourVision_txt">We envision revolutionizing sustainable agriculture by developing advanced, data-driven systems that optimize mushroom cultivation, reduce resource consumption, and enhance food security globally.</string>
    <string name="ourEthics_txt">We prioritize your privacy and the ethical conduct of research. All studies conducted through OMCM adhere to rigorous ethical standards. We ensure that your data is anonymized, securely stored, and used solely for the purposes of advancing scientific knowledge.</string>

    <string-array name="Filter">
        <item>Today</item>
        <item>This Week</item>
        <item>This Month</item>
        <item>3 Months</item>
        <item>6 Months</item>
        <item>All Time</item>
    </string-array>

    <string-array name="Water_Filter">
        <item>This Week</item>
        <item>This Month</item>
        <item>3 Months</item>
        <item>6 Months</item>
        <item>All Time</item>
    </string-array>
</resources>