<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Light">

    <View
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/main"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settings_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/profile_pageDesc"
        android:elevation="4dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/settings_label_desc"
        android:textColor="@color/highlight"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/back_buttonDesc"
        android:elevation="4dp"
        android:onClick="goToMain"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="TouchTargetSizeCheck,ImageContrastCheck,RedundantDescriptionCheck" />

    <TextView
        android:id="@+id/language_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="288dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/language_label"
        android:textColor="@color/highlight"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top" />

    <TextView
        android:id="@+id/current_language_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="243dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/current_language"
        android:textColor="@color/highlight"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_label" />

    <TextView
        android:id="@+id/display_category_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="332dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/display_category"
        android:textColor="@color/main"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_language_label" />

    <TextView
        android:id="@+id/display_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/display_mode_text"
        android:textColor="@color/highlight"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_category_label" />

    <TextView
        android:id="@+id/data_category_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="349dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/data_text"
        android:textColor="@color/main"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_mode" />

    <TextView
        android:id="@+id/backup_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="313dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/backup_text"
        android:textColor="@color/highlight"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_category_label" />

    <TextView
        android:id="@+id/save_data_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="313dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/save_data_text"
        android:textColor="@color/highlight"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backup_label" />

    <View
        android:id="@+id/barrier"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:background="@color/detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_data_label" />

    <TextView
        android:id="@+id/restore_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="310dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/restore_text"
        android:textColor="@color/highlight"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier" />

    <TextView
        android:id="@+id/load_data_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="254dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/load_existing_data_text"
        android:textColor="@color/highlight"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restore_label" />

    <TextView
        android:id="@+id/help_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="350dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/help_text"
        android:textColor="@color/main"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/load_data_label" />

    <TextView
        android:id="@+id/manual_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="313dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/manual_text"
        android:textColor="@color/highlight"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_label" />

    <View
        android:id="@+id/barrier_2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:background="@color/detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manual_label" />

    <TextView
        android:id="@+id/feedbacks_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="101dp"
        android:fontFamily="@font/inter_light"
        android:onClick="goToFeedbacks"
        android:text="@string/feedbacks_text"
        android:textColor="@color/highlight"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier_2" />

    <View
        android:id="@+id/barrier_4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:background="@color/detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbacks_label" />

    <TextView
        android:id="@+id/credits_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="224dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/credits_text"
        android:textColor="@color/highlight"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier_4" />

    <View
        android:id="@+id/barrier_5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:background="@color/detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credits_label" />

    <TextView
        android:id="@+id/version_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="270dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/version_info_text"
        android:textColor="@color/highlight"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier_5" />


</androidx.constraintlayout.widget.ConstraintLayout>