<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:theme="@style/ThemeOverlay.AppCompat.Light">

    <View
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/main"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/profile_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:elevation="4dp"
        android:text="@string/profile_label"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/highlight"
        android:contentDescription="@string/profile_pageDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/back_buttonDesc"
        android:elevation="4dp"
        android:onClick="goToMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:id="@+id/profilePicBackground"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="92dp"
        android:background="@color/detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_text"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="312dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:importantForAutofill="no"
        android:inputType="text"
        android:hint="@string/name_text"
        android:textColor="@color/highlight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/profile_pictureDesc"
        app:layout_constraintBottom_toBottomOf="@+id/profilePicBackground"
        app:layout_constraintEnd_toEndOf="@+id/profilePicBackground"
        app:layout_constraintStart_toStartOf="@+id/profilePicBackground"
        app:layout_constraintTop_toTopOf="@+id/profilePicBackground"
        app:srcCompat="@drawable/profile"
        android:elevation="4dp"/>

    <EditText
        android:id="@+id/bio_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="372dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:hint="@string/bio_text"
        android:textColor="@color/highlight"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>