<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:theme="@style/ThemeOverlay.AppCompat.Light">

    <View
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/main"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/back_buttonDesc"
        android:elevation="4dp"
        android:onClick="goToMain"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="TouchTargetSizeCheck,ImageContrastCheck,RedundantDescriptionCheck" />

    <TextView
        android:id="@+id/w_consumption_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/water_page_desc"
        android:elevation="4dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/water_consumption_text"
        android:textColor="@color/highlight"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/energyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/energy_tab_desc"
        android:elevation="4dp"
        android:onClick="goToEnergy"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_energy"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:id="@+id/bot"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/main"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/consumption_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/consumption_tab_desc"
        android:elevation="4dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bot"
        app:srcCompat="@drawable/ic_chart" />

    <ImageButton
        android:id="@+id/sensors_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/sensors_tab_desc"
        android:elevation="4dp"
        android:onClick="goToSensors"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/scan_tab"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/consumption_tab"
        app:layout_constraintTop_toTopOf="@+id/bot"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ic_sensor" />

    <ImageButton
        android:id="@+id/scan_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/scan_tab_desc"
        android:elevation="4dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bot"
        app:layout_constraintTop_toTopOf="@+id/bot"
        app:srcCompat="@drawable/ic_scan" />


</androidx.constraintlayout.widget.ConstraintLayout>